--- a/Diagnosis.App/Controls/Search/NewAutocomplete.xaml
+++ b/Diagnosis.App/Controls/Search/NewAutocomplete.xaml
@@ -8,6 +8,7 @@
              xmlns:dd="clr-namespace:GongSolutions.Wpf.DragDrop;assembly=GongSolutions.Wpf.DragDrop"
              GotFocus="UserControl_GotFocus"
              LostFocus="UserControl_LostFocus"
+             LostKeyboardFocus="UserControl_LostKeyboardFocus"
              mc:Ignorable="d"
              d:DesignHeight="300" d:DesignWidth="300">
     <UserControl.CommandBindings>
