--- a/Diagnosis.App/Screens/Patients.xaml
+++ b/Diagnosis.App/Screens/Patients.xaml
@@ -57,7 +57,7 @@
         <DockPanel Grid.Row="3" >
             <TextBlock TextWrapping="Wrap" Margin="10"
                        HorizontalAlignment="Center" VerticalAlignment="Top"
-                       Visibility="{Binding Patients.Count, Converter={StaticResource LessThanToVisibility}}"
+                       Visibility="{Binding NoPatients, Converter={StaticResource BooleanToVisibilityConverter}}"
                        >
                 <Run Text="Сначала " /><Hyperlink Command="{Binding AddPatientCommand}">добавьте нового пациента</Hyperlink><Run>.</Run>
             </TextBlock>
@@ -67,7 +67,7 @@
                   Grid.Row="3"
                   ItemsSource="{Binding Patients}"
                   SelectedItem="{Binding SelectedPatient}"
-                  Visibility="{Binding Patients.Count, Converter={StaticResource MoreThanToVisibility}}"
+                  Visibility="{Binding NoPatients, Converter={StaticResource NegBooleanToVisibilityConverter}}"
                   GridLinesVisibility="None"
                   Margin="0,10,0,0"
                   FontSize="15"
