--- a/Diagnosis.App/Screens/Patients.xaml
+++ b/Diagnosis.App/Screens/Patients.xaml
@@ -4,9 +4,9 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:search="clr-namespace:Diagnosis.App.Controls.Search"
+             xmlns:controls="clr-namespace:Diagnosis.App.Controls"
              mc:Ignorable="d"
              x:Name="patientsControl"
-             Loaded="patientsControl_Loaded"
              FocusManager.IsFocusScope="True"
              d:DesignHeight="300" d:DesignWidth="400">
     <!--PatientsListViewModel-->
@@ -24,6 +24,29 @@
                 </Setter.Value>
             </Setter>
         </Style>
+
+        
+        <Style x:Key="CellStyle" TargetType="DataGridCell">
+            <Setter Property="BorderThickness"
+                    Value="0" />
+            <Setter Property="FocusVisualStyle"
+                    Value="{x:Null}" />
+            <Setter Property="KeyboardNavigation.IsTabStop"
+                    Value="False" />
+        </Style>
+
+        <Style  x:Key="SelectableCellStyle"
+                TargetType="{x:Type DataGridCell}"
+                BasedOn="{StaticResource CellStyle}">
+            <Style.Triggers>
+                <Trigger Property="IsSelected"
+                         Value="True">
+                    <Setter Property="KeyboardNavigation.IsTabStop"
+                            Value="True" />
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
     </UserControl.Resources>
 
     <Grid HorizontalAlignment="Stretch" MaxWidth="500" MinWidth="300">
@@ -67,14 +90,17 @@
                   Grid.Row="3"
                   ItemsSource="{Binding Patients}"
                   SelectedItem="{Binding SelectedPatient}"
+                  controls:MultiSelectorBehaviours.SynchronizedSelectedItems="{Binding SelectedPatients}"
                   Visibility="{Binding NoPatients, Converter={StaticResource NegBooleanToVisibilityConverter}}"
+                  CellStyle="{StaticResource CellStyle}"
                   GridLinesVisibility="None"
                   Margin="0,10,0,0"
                   FontSize="15"
                   IsReadOnly="True"
                   SelectionUnit="FullRow"
-                  SelectionMode="Single"
-                  AutoGenerateColumns="False">
+                  SelectionMode="Extended"
+                  AutoGenerateColumns="False"
+                  SelectedCellsChanged="dataGrid_SelectedCellsChanged">
             <DataGrid.Columns>
                 <DataGridTextColumn Header="Метка" IsReadOnly="True" Binding="{Binding Label, Mode=OneWay}" />
                 <DataGridTextColumn Header="Фамилия" IsReadOnly="True" Binding="{Binding LastName, Mode=OneWay}" />
@@ -84,16 +110,34 @@
                 <DataGridTextColumn Header="Возраст" IsReadOnly="True" Binding="{Binding Age, Mode=OneWay}" />
             </DataGrid.Columns>
             <DataGrid.InputBindings>
-                <KeyBinding Key="Enter" Command="{Binding OpenPatientCommand}" />
-                <KeyBinding Key="F2" Command="{Binding EditPatientCommand}" />
-                <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding OpenPatientCommand}" />
+                <KeyBinding Key="Enter" Command="{Binding OpenCommand}" />
+                <KeyBinding Key="F2"
+                            Command="{Binding EditCommand}" />
+                <KeyBinding Key="Delete"
+                            Command="{Binding DeleteCommand}" />
+                <MouseBinding MouseAction="LeftDoubleClick" Command="{Binding OpenCommand}" />
             </DataGrid.InputBindings>
-            <DataGrid.CellStyle>
-                <Style TargetType="DataGridCell">
-                    <Setter Property="BorderThickness" Value="0" />
-                    <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+            <DataGrid.RowStyle>
+                <Style TargetType="DataGridRow">
+                    <Setter Property="Tag"
+                            Value="{Binding DataContext, ElementName=dataGrid}" />
+                    <Setter Property="ContextMenu">
+                        <Setter.Value>
+                            <ContextMenu>
+                                <MenuItem Header="Открыть"
+                                          InputGestureText="Enter"
+                                          Command="{Binding PlacementTarget.Tag.OpenCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
+                                <MenuItem Header="Редактировать"
+                                          InputGestureText="F2"
+                                          Command="{Binding PlacementTarget.Tag.EditCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
+                                <MenuItem Header="Удалить"
+                                          InputGestureText="Del"
+                                          Command="{Binding PlacementTarget.Tag.DeleteCommand, RelativeSource={RelativeSource AncestorType=ContextMenu}}" />
+                            </ContextMenu>
+                        </Setter.Value>
+                    </Setter>
                 </Style>
-            </DataGrid.CellStyle>
+            </DataGrid.RowStyle>
         </DataGrid>
     </Grid>
 </UserControl>
