ui. Fix Year watemark

--- a/Diagnosis.App/Windows/PatientEditorWindow.xaml
+++ b/Diagnosis.App/Windows/PatientEditorWindow.xaml
@@ -97,7 +97,7 @@
                 </DockPanel>
                 <DockPanel>
                     <Label Content="Возраст" />
-                    <TextBox Text="{Binding Age, Mode=TwoWay, ValidatesOnDataErrors=True, TargetNullValue=''}"
+                    <TextBox Text="{Binding Age, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged, ValidatesOnDataErrors=True, TargetNullValue=''}"
                              Width="50"
                              HorizontalContentAlignment="Right">
                     </TextBox>
