--- a/Diagnosis.App/Windows/AppointmentEditorWindow.xaml
+++ b/Diagnosis.App/Windows/AppointmentEditorWindow.xaml
@@ -29,7 +29,7 @@
         </StackPanel>
 
         <StackPanel Grid.Row="1" Style="{StaticResource DialogButtonsPanel}">
-            <Button Name="saveButton" IsDefault="True" Command="{Binding OkCommand}">_Сохранить</Button>
+            <Button Name="saveButton" IsDefault="True" Command="{Binding OkCommand}">Сохранить</Button>
             <Button Name="cancelButton" IsCancel="True" Command="{Binding CancelCommand}">Отмена</Button>
         </StackPanel>
     </Grid>
