--- a/Diagnosis.App/Windows/Shell/MenuBar.xaml
+++ b/Diagnosis.App/Windows/Shell/MenuBar.xaml
@@ -13,10 +13,10 @@
             <!--<MenuItem Header="_Пациенты">
                 <MenuItem Command="{Binding AddPatientCommand}" Header="_Новый..." />
             </MenuItem>-->
-            <!--<MenuItem Header="_Справочники">
+            <!--<MenuItem Header="_Справочники">-->
                 <MenuItem Command="{Binding OpenWordsCommand}" Header="_Слова" />
-            </MenuItem>
-            <MenuItem Header="_Вид">
+            <!--</MenuItem>-->
+            <!--<MenuItem Header="_Вид">
                 <MenuItem IsCheckable="true" IsChecked="{Binding SearchAside.Opened}" Header="_Поиск" />
             </MenuItem>-->
         </Menu>
