--- a/Diagnosis.App/Windows/MainWindow.xaml
+++ b/Diagnosis.App/Windows/MainWindow.xaml
@@ -34,6 +34,9 @@
             <DataTemplate DataType="{x:Type vm:PatientsListViewModel}">
                 <screen:Patients />
             </DataTemplate>
+            <DataTemplate DataType="{x:Type vm:DoctorsListViewModel}">
+                <screen:Doctors />
+            </DataTemplate>
             <DataTemplate DataType="{x:Type vm:UndoOverlayViewModel}">
                 <controls:UndoOverlay />
             </DataTemplate>
