--- a/Diagnosis.App/Screens/Login.xaml
+++ b/Diagnosis.App/Screens/Login.xaml
@@ -4,45 +4,53 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             d:DesignHeight="300"
+             d:DesignWidth="300">
     <!--LoginViewModel-->
     <UserControl.Resources>
-        <Style TargetType="Label" BasedOn="{StaticResource label90}" />
+        <Style TargetType="Label"
+               BasedOn="{StaticResource label90}" />
 
-        <Style TargetType="DockPanel">
-            <Setter Property="Margin" Value="0,0,0,10" />
+        <Style TargetType="DockPanel"
+               BasedOn="{StaticResource formLine}">
         </Style>
     </UserControl.Resources>
-    <Grid>        
-        <StackPanel MaxWidth="300">
-            <TextBlock Style="{StaticResource ScreenTitle}" Padding="5,0,0,0">Вход</TextBlock>
+    <Grid>
+        <StackPanel Width="300">
+            <TextBlock Style="{StaticResource ScreenTitle}"
+                       Padding="5,0,0,10">Вход</TextBlock>
             <DockPanel>
                 <Label>Доктор:</Label>
                 <ComboBox x:Name="doctors"
-                          SelectedItem="{Binding CurrentDoctor}"
-                          ItemsSource="{Binding Doctors}">
+                          SelectedItem="{Binding SelectedUser}"
+                          ItemsSource="{Binding Users}">
                     <ComboBox.ItemTemplate>
                         <DataTemplate>
                             <TextBlock Text="{Binding Converter={StaticResource ManToShortName}}" />
                         </DataTemplate>
                     </ComboBox.ItemTemplate>
-                    
                 </ComboBox>
             </DockPanel>
 
-            <DockPanel>
+            <DockPanel Visibility="{Binding PasswordVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
                 <Label>Пароль:</Label>
                 <Border DataContext="{Binding IsWrongPassword}">
                     <PasswordBox x:Name="password"
                                  VerticalContentAlignment="Center"
-                                 PasswordChanged="password_PasswordChanged"/>
+                                 PasswordChanged="password_PasswordChanged" />
                 </Border>
+            </DockPanel>
+            <DockPanel Visibility="{Binding RememberVisible, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <Label> </Label>
+                <CheckBox IsChecked="{Binding Remember, Mode=TwoWay}">Запомнить</CheckBox>
             </DockPanel>
             <Button x:Name="login"
                     Content="Войти"
                     IsDefault="True"
-                    Command="{Binding LoginCommand, Mode=OneWay}"                     
-                    Width="150"/>
+                    Command="{Binding LoginCommand, Mode=OneWay}"
+                    Width="150"
+                    Height="23"
+                    Margin="75,20" />
         </StackPanel>
     </Grid>
 </UserControl>
