--- a/Diagnosis.App/Controls/Editors/SexChooser.xaml
+++ b/Diagnosis.App/Controls/Editors/SexChooser.xaml
@@ -1,21 +1,27 @@
-﻿<UserControl
-             xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<UserControl xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-             xmlns:Converters="clr-namespace:Diagnosis.App.Converters" 
              x:Class="Diagnosis.App.Controls.Editors.SexChooser"
              mc:Ignorable="d"
-             d:DesignHeight="300" d:DesignWidth="300">
+             MinWidth="100"
+             d:DesignHeight="30"
+             d:DesignWidth="100">
 
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*" />
+            <ColumnDefinition Width="*" />
         </Grid.ColumnDefinitions>
-        <RadioButton IsChecked="{Binding IsMale, Converter={StaticResource NullableBoolean}, ConverterParameter='true'}"
+        <RadioButton IsChecked="{Binding IsMale}"
                      Content="муж" />
-        <RadioButton Grid.Column="1" IsChecked="{Binding IsMale, Converter={StaticResource NullableBoolean}, ConverterParameter='false'}"
+        <RadioButton Grid.Column="1"
+                     IsChecked="{Binding IsFemale}"
                      Content="жен" />
+        <RadioButton Grid.Column="2"
+                     Visibility="{Binding WithUnknown, Converter={StaticResource BooleanToVisibilityConverter}, RelativeSource={RelativeSource AncestorType=UserControl}}"
+                     IsChecked="{Binding UnknownSex}"
+                     Content="?" />
     </Grid>
 </UserControl>
