ui. Fix grid dbl click

--- a/Diagnosis.App/Screens/Doctors.xaml
+++ b/Diagnosis.App/Screens/Doctors.xaml
@@ -89,11 +89,11 @@
                             Command="{Binding EditCommand}" />
                 <KeyBinding Key="Delete"
                             Command="{Binding DeleteCommand}" />
-                <MouseBinding MouseAction="LeftDoubleClick"
-                              Command="{Binding EditCommand}" />
             </DataGrid.InputBindings>
             <DataGrid.RowStyle>
                 <Style TargetType="DataGridRow">
+                    <Setter Property="controls:RowDblClick.DoubleClickCommand"
+                            Value="{Binding ElementName=dataGrid, Path=DataContext.EditCommand}" />
                     <Setter Property="Tag"
                             Value="{Binding DataContext, ElementName=dataGrid}" />
                     <Setter Property="ContextMenu">
