Add Measure editor
Measure with single word in one HrItem

--- a/Diagnosis.App/Controls/Search/Tag.xaml
+++ b/Diagnosis.App/Controls/Search/Tag.xaml
@@ -86,6 +86,13 @@
                             <Setter Property="Foreground"
                                     Value="Red" />
                         </DataTrigger>
+                        <DataTrigger Binding="{Binding BlankType}"
+                                     Value="{x:Static auto:Tag+BlankTypes.Measure}">
+                            <Setter Property="FontStyle"
+                                    Value="Normal" />
+                            <Setter Property="Foreground"
+                                    Value="Green" />
+                        </DataTrigger>
                     </Style.Triggers>
                 </Style>
             </TextBox.Style>
