--- a/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
+++ b/Diagnosis.App/Controls/Editors/HealthRecordEditorShared.xaml
@@ -66,6 +66,12 @@
                         <TextBlock Text="МКБ" />
                     </DockPanel>
                 </Button>
+                <Button Command="{Binding AddMeasureCommand}"
+                        ToolTip="Добавить измерение">
+                    <DockPanel>
+                        <TextBlock Text="измерение" />
+                    </DockPanel>
+                </Button>
             </ToolBar>
             <Button x:Name="closeButton" Command="{Binding CloseCommand}" ToolBar.OverflowMode="Never" VerticalAlignment="Top"  Height="16" HorizontalAlignment="Right" Width="16"
                 ToolTip="Закрыть редактор, сохранив все изменения"
